# ucl-fyp-poc

sig/: Cargo.toml
sig/src/: lib.rs
sig/src/bls/: bls.rs  mod.rs  params.rs  r1cs.rs
sig/src/hash/: mod.rs
sig/src/hash/hash_to_curve/: mod.rs
sig/src/hash/map_to_curve/: mod.rs
