[package]
name = "sig"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-377 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-bw6-761 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["r1cs", "prf", "parallel"] }
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-groth16 = { version = "0.5.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.5.0", features = ["parallel"] }
ark-relations = "0.5.1"
ark-serialize = { version = "0.5.0", features = ["parallel"] }
array-util = "1.0.2"
arrayvec = "0.7.6"
bincode = "1.3.3"
blake2 = "0.10.6"
delegate = "0.13.2"
derivative = "2.2.0"
rand = "0.8.5"
roaring = { version = "0.10.10", features = ["serde"] }
serde = "1.0.217"
tracing = "0.1.41"

[dev-dependencies]
ark-snark = "0.5.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

[[bench]]
name = "bls_pairing"
harness = false

[[bench]]
name = "groth16"
harness = false
